--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <!--   profile skills  -->
       </div>
       <div id="buttons"><a href="#contact">
-          <input type="button" name="download" value="Hire Me"></a>
+          <input type="button" name="download" value="Contact Us"></a>
           <a href="https://resume-ap.great-site.net/" target="_blank">
         <input type="button" name="download" value="Resume"></a>
       </div>
